<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.openmrs</groupId>
    <artifactId>distro-emr</artifactId>
    <version>3.7.0-SNAPSHOT</version>
  </parent>

  <groupId>org.openmrs.module</groupId>
  <artifactId>openmrs-webhook-module</artifactId>
  <name>OpenMRS Appointment Webhook Module</name>
  <packaging>jar</packaging>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <junit.version>5.11.4</junit.version>
    <openmrs.version>2.8.6</openmrs.version>
    <event.version>4.0.0</event.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openmrs.api</groupId>
      <artifactId>openmrs-api</artifactId>
      <version>${openmrs.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>javax.jms</groupId>
      <artifactId>javax.jms-api</artifactId>
      <version>2.0.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.openmrs</groupId>
      <artifactId>event-api</artifactId>
      <version>${event.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.openmrs.maven.plugins</groupId>
        <artifactId>maven-openmrs-plugin</artifactId>
        <version>1.0.1</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <id>initialize-openmrs-module</id>
            <phase>initialize</phase>
            <goals>
              <goal>initialize-module</goal>
            </goals>
          </execution>
          <execution>
            <id>package-openmrs-module</id>
            <phase>package</phase>
            <goals>
              <goal>package-module</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.2</version>
        <configuration>
          <useModulePath>false</useModulePath>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
